syntax = "proto3";

option go_package = ".;proto";

package proto;

service Friendships {
  rpc ListFriendship(FriendshipLookupRequest) returns (ListFriendshipResponse) {}
  rpc GetFriendship(FriendshipTwoSideLookupRequest) returns (FriendshipResponse) {}
}

message FriendshipLookupRequest {
  uint64 account_id = 1;
  uint32 status = 2;
}

message FriendshipTwoSideLookupRequest {
  uint64 account_id = 1;
  uint64 related_id = 2;
  uint32 status = 3;
}

message FriendshipResponse {
  uint64 account_id = 1;
  uint64 related_id = 2;
  uint32 status = 3;
}

message ListFriendshipResponse {
  repeated FriendshipResponse data = 1;
}
